# tape-film-ichoose

./: .gitignore  build_films_from_catalog.py  catalog_match_helpers.py  clear_bad_links_opt.py  ed25519  ed25519.pub  enrich_catalog_with_tmdb.py  enrich_catalog_with_tmdb_tidyup.py  enrich_catalog_with_tmdb_v2.py  export_supplier_orders.py  harmonize_supplier_offers.py  import_lasgo_catalog.py  import_lasgo_catalogv2.py  import_lasgo_catalogv3.py  import_lasgo_raw.py  import_moovies_catalog.py  import_moovies_catalogv2.py  import_moovies_catalogv3.py  import_moovies_raw.py  import_shopify_raw.py  maintenance_rematch_tmdb_from_csv.py  normalize_supplier_products.py  package-lock.json  package.json  publish_selected_barcodes_to_shopify.py  publish_supplier_offers_to_catalog.py  refresh_tmdb_metadata_in_catalog.py  relink_suspicious_catalog_rows.py  relink_unlinked_catalog_rows.py  shopify.app.toml  sync_films_from_catalog.py  sync_moovies_stock.py  sync_shopify_barcodes.py  sync_shopify_stock.py  test-openai.ts  test-query-parser.ts  tmdb_match_helpers.py  upsert_supplier_offers_to_catalog_items_preserve_tmdb.py
tape-film-agent/: .gitignore  README.md  pyproject.toml  render.yaml
tape-film-agent/app/: config.py  logging.py  main.py  types.py
tape-film-agent/docs/: architecture.md  deploy-render.md  env-vars.md  jobs.md  shopify-endpoints.md
tape-film-agent/jobs/: common.py  run_catalog_ingest.py  run_daily_stock_sync.py  run_reconciliation.py  run_release_date_refresh.py  run_shopify_publish_sync.py
tape-film-agent/legacy/: build_films_from_catalog.py  (+7 more)
(+237 files in other folders)
