[project]
name = 'tape-film-agent'
version = '0.1.0'
description = 'Tape Film storefront and ops agent backend'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
  'fastapi>=0.115.0',
  'uvicorn>=0.30.0',
  'pydantic-settings>=2.4.0',
  'python-dotenv>=1.0.1',
]

[tool.pytest.ini_options]
pythonpath = ['.']
